Use subgroups and revamp mul mat vec for q4_n

--- a/kompute/src/CMakeLists.txt
+++ b/kompute/src/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(kompute STATIC Algorithm.cpp
     OpAlgoDispatch.cpp
     OpMemoryBarrier.cpp
     OpTensorCopy.cpp
+    OpTensorFill.cpp
     OpTensorSyncDevice.cpp
     OpTensorSyncLocal.cpp
     OpBufferSyncDevice.cpp
