--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -482,6 +482,7 @@ if (LLAMA_KOMPUTE)
           kompute/op_mul_mat_mat_f16.comp
           kompute/op_mul_mat_mat_f32.comp
           kompute/op_mul_mat_mat_q4_0.comp
+          kompute/op_mul_mat_mat_q4_1.comp
           kompute/op_mul_mat_mat_q8_0.comp
           kompute/op_mul_mat_mat_q6_k.comp
           kompute/op_mul_mat_f16.comp
@@ -517,6 +518,7 @@ if (LLAMA_KOMPUTE)
           shaderop_mul_mat_mat_f16.h
           shaderop_mul_mat_mat_f32.h
           shaderop_mul_mat_mat_q4_0.h
+          shaderop_mul_mat_mat_q4_1.h
           shaderop_mul_mat_mat_q8_0.h
           shaderop_mul_mat_mat_q6_k.h
           shaderop_mul_mat_f16.h
